app/styles/main.css
:root {
	--dark: #111;
}

* {
	box-sizing: border-box;
}

html, body {
	width: 100%;
	height: 100%;
	background: var(--dark);
	font-family: helvetica, sans-seif;
	font-size: 100%;
}

body {
    font-family: helvetica, sans-seif;
	font-size: 16px;
}

/* Players */
.decks {
	display: flex;
	align-items: center;

	& .player-with-controls:nth-of-type(even) {
		& .mixer {
			order: -1
		}
	}
}

.player-with-controls {
	display: flex;
}

.player {
    background: #9eacad;
    padding: 5px;
    overflow: hidden;
	font-size: 14px;
	width: 100%;
}

input[type=range]::-moz-range-track {
	background: #000;
	border-radius: 0;
}

.mixer {
	background: #222;
	width: 81px;
	& .slider {
		width: 290px;
		top: 55px;
		left: -32px;
    	position: relative;
	}

	& input[type='range'] {
		&::-webkit-slider-thumb {
			appearance: none !important;
			background: linear-gradient(to left, white 44%, black 44%, black 54%, white 54%);
			border-radius: 0;
			border: 0;
			height:54px;
			width:20px;
		}
		&::-moz-range-thumb {
			appearance: none !important;
			background: linear-gradient(to left, white 44%, black 44%, black 54%, white 54%);
			border-radius: 0;
			border: 0;
			height:54px;
			width:20px;
		}
	}
}

.header {
    background: #111214;
    color: white;
    padding: 4px;
    overflow: hidden;
    margin-bottom: 2px;
    display: flex;
}

.album {
    width: 48px;
    height: 48px;
    background: #555;
	background: linear-gradient(to top, #555, #999);
	background-size: cover;
}

.deck {
    width: 48px;
    height: 48px;
    background: orange;
    text-align: center;
    line-height: 1.8;
    font-size: 2em;
    color: rgba(white, 0.75);
    font-weight: bold;
}

.header-body {
    margin: 0 10px;
    flex: 2;
}

.player-table {
	border: 0;
	width: 100%;
	table-layout: fixed;
	white-space: nowrap;
	margin-top: 3px;
	& td {
		padding: 0.1em;
		vertical-align: top;
		white-space: nowrap;
		overflow: hidden;
		text-overflow: ellipsis;
	}
}

.body {
    display: flex;
}

.screen {
    background: #000;
    height: 200px;
    overflow: hidden;
    flex: 2;

	& > wave {
        margin: 1rem 0;
    }

	&.loading {
		position: relative;

		&:before {
			content: 'Analyzing...';
			position: absolute;
			font-size: 1em;
			top: 0;
			left: 0;
			width: 100%;
			height: auto;
			color: white;
			opacity: 0.5;
			line-height: 14;
			text-align: center;
		}
	}
}

.tempo {
    background: #333;
    width: 55px;
	position: relative;
	& input {
		position: relative;
		top: 4px;
	}
	&:hover {
		& .bend {
			display: block;
		}
	}
}

.bend {
	display: none;
	position: absolute;
	bottom: 0;
	width: 100%;
	& button {
		width:50%;
		background: black;
		color: white;
		border: 0;
		cursor: pointer;
		outline: 0;
		opacity: .5;
		&:hover {
			opacity: 1;
		}
	}
}

.slider-vertical {
    margin: 95px 0 0 -72px;
    transform: rotate(-90deg);
}
input[type='range'] {
    appearance: none !important;
    background:#000;
    height: 3px;
    width: 199px;
    outline: 0;
	&::-webkit-slider-thumb {
		appearance: none !important;
		background: linear-gradient(to left, #656565 44%, white 44%, white 54%, #656565 54%);
		border-radius: 0;
		border: 0;
		height:54px;
	    width:20px;
	}
	&::-moz-range-thumb {
		appearance: none !important;
		background: linear-gradient(to left, #656565 44%, white 44%, white 54%, #656565 54%);
		border-radius: 0;
		border: 0;
		height:54px;
	    width:20px;
	}
}

.footer {
    margin-top: 5px;
    overflow: hidden;
    display: flex;
}

.btn {
    background: #1c2723;
    color: white;
    border: 0;
    padding: .5em 1em;
    border-radius: 3px;
    margin: 0;
    float: left;
    outline: 0;
    cursor: pointer;
    font-size: 13px;
	@media(min-width: 1250px) {
		padding: .75em 1.5em;
	}
    &:hover {
        background: #333;
    }
    &:active {
        background: #555;
    }
    &.active {
        background: #98ea62;
        color: #111;
    }
    & .btn-lg {
        padding: .75em 2.25em;
    }
    & + .btn {
        margin-left: 5px;
    }
}

.btn-group {
    display: inline-block;
    overflow: hidden;
    border-radius: 2px;
    & .btn {
        border-radius: 0;
        float: left;
        margin-left: 0;
		&.active {
  			animation: blink .5s linear infinite alternate;
		}
    }
}

@keyframes blink {
	to { background: #e3e3e3; }
}

.hot-cue {
    display: none;
    @media (min-width: 800px) {
        display: block;
        margin-left: 5px;
    }
	@media (min-width: 1250px) {
        margin-left: 1em;
    }
    & .active {
        background: aqua;
    }
}

.loop {
    flex: 2;
    @media (min-width: 740px) {
        flex: 1;
    }
    & .btn-group {
        float: right;
    }
}


/* Xfader row */
.fader {
	background: #222;
	padding: 1em;
	display: flex;
	align-items: center;

	& .item {
		width: 33.3334%;
	}

	& input[type='range'] {
		margin: 0 auto;
		display: block;
		&::-webkit-slider-thumb {
			appearance: none !important;
			background: linear-gradient(to left, white 44%, black 44%, black 54%, white 54%);
			border-radius: 0;
			border: 0;
			height:54px;
			width:20px;
		}
		&::-moz-range-thumb {
			appearance: none !important;
			background: linear-gradient(to left, white 44%, black 44%, black 54%, white 54%);
			border-radius: 0;
			border: 0;
			height:54px;
			width:20px;
		}
	}
}

.search {
	font-weight: 300;
	font-size: 12px;
	& input {
		background: #333;
		border: 0;
		appearance: none;
		-webkit-border-radius: 2px 0 0 2px;
		border-radius: 2px 0 0 2px;
		padding: .75em;
		color: white;
		outline: 0;

		&:focus {
			background: #444;
		}
	}
	& button {
		background: #333;
		color: white;
		border: 0;
		padding: 0.75em 1em;
		border-radius: 0 2px 2px 0;
		margin-left: 1px;

		&:hover, &:focus {
			background: #444;
		}
	}
	& .searchStatus {
		color: white;
		display: inline-block;
		margin-left: 1em;
	}
}

.soundcloud {
	float: right;
	margin-top: -5px;
}


/* Tracks table */
.table-scroll {
	height: calc(100vh - 395px);
	overflow-y: scroll;
	-webkit-overflow-scrolling: touch;
}

.table {
	width: 100%;
	background: #333;
	color: white;
	font-size: 12px;
	table-layout: fixed;
	white-space: nowrap;
	& td {
		padding: 5px 1em;
		background: #111;
		white-space: nowrap;
		overflow: hidden;
		text-overflow: ellipsis;
	}
	& tbody tr:nth-of-type(odd) td {
		background: #151515;
	}
	& tbody tr:hover td {
		background: #222;
	}
	& thead td {
		background: #333;
	}
	& button {
		background: #9eacad;
	    border: 0;
	    border-radius: 2px;
	    line-height: 1;
	    padding: 2px;
		cursor: pointer;
		width: 45%;
		&:hover, &:focus {
			background: #ccc;
		}
		&:active {
			background: aqua;
		}
	}
}

.artwork-strip {
	width: 100%;
	height: 15px;
	background-position: center;
	background-size: cover;
}


/* Helpers */
.clearfix {
    overflow: hidden;
}

.text-right {
    text-align: right;
}

.muted {
    opacity: .7;
}

input[disabled] {
	cursor: not-allowed;
	opacity: .5;
}

